Fixed scrollbar and menu font size.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -6,6 +6,8 @@
 
 *{ border-radius: 0px !important; }
 
+html{ overflow-y: scroll; }
+
 body {
   background: url("../images/pattern.png");
   background-attachment: fixed;
