--- a/app/assets/stylesheets/navbarOverride.less
+++ b/app/assets/stylesheets/navbarOverride.less
@@ -82,3 +82,10 @@
     max-height: 40px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .navbar-inverse {
+    font-size: 16px;
+    .navbar-nav a { padding: 5px 15px;}
+  }
+}
